--- a/Soleus-GameClient/SFML-AppTest.vcxproj.filters
+++ b/Soleus-GameClient/SFML-AppTest.vcxproj.filters
@@ -71,5 +71,8 @@
     <ClInclude Include="Date.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
