--- a/Soleus-GameServer/Soleus-GameServer.vcxproj.filters
+++ b/Soleus-GameServer/Soleus-GameServer.vcxproj.filters
@@ -41,5 +41,11 @@
     <ClInclude Include="GameLoop.h">
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
+    <ClInclude Include="Date.h">
+      <Filter>Arquivos de Cabeçalho</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
