--- a/Soleus-GameClient/SFML-AppTest.vcxproj
+++ b/Soleus-GameClient/SFML-AppTest.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Networker.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TileMap.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
