--- a/Soleus-GameServer/Soleus-GameServer.vcxproj
+++ b/Soleus-GameServer/Soleus-GameServer.vcxproj
@@ -133,10 +133,12 @@
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Date.h" />
     <ClInclude Include="GameLoop.h" />
     <ClInclude Include="Messenger.h" />
     <ClInclude Include="Networker.h" />
     <ClInclude Include="Server.h" />
+    <ClInclude Include="Util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
