Better entity integration with gameloop, initial implementation of server entities interpolated movement, changed util implementation to move implementation from header

--- a/Soleus-GameClient/SFML-AppTest.vcxproj
+++ b/Soleus-GameClient/SFML-AppTest.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Networker.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TileMap.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
