--- a/Soleus-GameServer/Soleus-GameServer.vcxproj.filters
+++ b/Soleus-GameServer/Soleus-GameServer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Creature.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Util.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Messenger.h">
