--- a/Soleus-GameServer/Soleus-GameServer.vcxproj
+++ b/Soleus-GameServer/Soleus-GameServer.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Networker.cpp" />
     <ClCompile Include="Server.cpp" />
+    <ClCompile Include="Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Creature.h" />
